test/sema/negative/lazy_analysis2.impala
fn f(x: int) -> int {
   g()
}
fn g() -> int {
   x
}
