test/sema/negative/lazy_analysis2.out
lazy_analysis2.impala:5 col 4: error: 'x' not found in current scope
